@@ -1,5 +1,6 @@
 package com.learnings.auth_service.service;
 
+import com.learnings.auth_service.entity.Role;
 import com.learnings.auth_service.entity.User;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
@@ -9,7 +10,6 @@ import org.springframework.stereotype.Service;
 import javax.crypto.SecretKey;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class JwtService {
@@ -22,8 +22,9 @@ public class JwtService {
 
     public String generateToken(User user) {
         List<String> roles = user.getRoles().stream()
+                .map(Role::getRoleName)
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Object> claims = new HashMap<>();
         claims.put("roles", roles);
